Add location and SMS metadata to transactions
This update introduces location recording for transactions, including permission handling, geocoding, and map previews in the UI. It also enhances SMS parsing to extract and store metadata such as sender, receiver, merchant, UPI ID, and reference number, displaying these details in the transaction detail screen. Dependencies for location and image loading (Coil) are added, and the database schema is updated to support the new fields.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Internet permission for loading map images and cloud sync -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <!-- Notification permission for Android 13+ -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     
     <!-- SMS permissions for auto-expense detection -->
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    
+    <!-- Location permission for recording transaction location -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".EpManagerApp"
