Add background sync and manual cloud backup/restore
Introduces WorkManager-based background sync for settings data using Hilt integration, with periodic auto-sync every 6 hours. Adds manual backup and restore options for both settings and transaction history, with UI updates in ProfileScreen and new methods in AuthViewModel and FirebaseSyncManager. Also adds split group budget support, new default categories for split expenses, and improves export sharing intent. Database version bumped to 9.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     <!-- Location permission for recording transaction location -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    
+    <!-- Vibrate permission for haptic feedback -->
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".EpManagerApp"
@@ -27,6 +30,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Epmanager"
         tools:targetApi="31">
+        
+        <!-- Disable default WorkManager initialization to use Hilt -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data
+                android:name="androidx.work.WorkManagerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+        </provider>
         
         <activity
             android:name=".MainActivity"
