--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 .cxx
 local.properties
 
+# Firebase configuration (contains sensitive API keys)
+app/google-services.json
+
 # Gradle caches (accidentally placed in project root)
 caches/
 daemon/
